[tool.poetry]
name = "todo-issues"
version = "0.1.0"
description = ""
authors = ["Matt Anderson <matt@manderscience.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
pygithub = "^2.1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
black = "^23.10.1"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
